# pb-shape-parser

./: Cargo.toml  build.rs
src/: main.rs  proto_shapes.rs  shapes.proto
