[package]
name = "pb-shape-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.12"
prost = "0.11"
serde-pickle = "1.1.1"
glob = "0.3.1"
rayon = "1.8.0"


[build-dependencies]
prost-build = { version = "0.11" }
